==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - The correct error messages and codes are now thrown for REST actions.

 - Fixed an issue that could cause non-grouping aggregations on virtual tables
   to return the wrong result.

 - Fixed a bug in the memory accounting of the circuit breaker for HTTP
   results when querying ``GEO_SHAPE`` columns.

 - Reflect internally used default size for ``translog.flush_threshold_size``
   also in documentation and expose the correct default value in table
   settings.