@@ -49,7 +49,7 @@ public class SubSelectAnalyzerTest extends CrateUnitTest {
             "select aliased_sub.x / aliased_sub.i from (select x, i from t1) as aliased_sub");
         QueriedDocTable relation = (QueriedDocTable) statement.relation();
         assertThat(relation.fields().size(), is(1));
-        assertThat(relation.fields().get(0), isField("divide(x, i)"));
+        assertThat(relation.fields().get(0), isField("(x / i)"));
         assertThat(relation.tableRelation().tableInfo(), is(T1_INFO));
     }
 
@@ -77,7 +77,7 @@ public class SubSelectAnalyzerTest extends CrateUnitTest {
         QueriedDocTable relation = (QueriedDocTable) statement.relation();
         assertThat(relation.fields().size(), is(2));
         assertThat(relation.fields().get(0), isField("aa"));
-        assertThat(relation.fields().get(1), isField("add(add(x, i), 1)"));
+        assertThat(relation.fields().get(1), isField("(xi + 1)"));
         assertThat(relation.tableRelation().tableInfo(), is(T1_INFO));
     }
 
@@ -118,6 +118,18 @@ public class SubSelectAnalyzerTest extends CrateUnitTest {
         assertThat(relation.fields().size(), is(2));
         assertThat(relation.fields().get(0), isField("min_col"));
         assertThat(relation.fields().get(1), isField("add_subquery"));
+        assertThat(relation.tableRelation().tableInfo(), is(T1_INFO));
+    }
+
+    @Test
+    public void testPreserveAliasedOnSubSelect() throws Exception {
+        SelectAnalyzedStatement statement = analyze("SELECT tt1.x as a1, min(tt1.x) as a2 " +
+                                                    "FROM (select * from t1) as tt1 " +
+                                                    "GROUP BY a1");
+        QueriedDocTable relation = (QueriedDocTable) statement.relation();
+        assertThat(relation.fields().size(), is(2));
+        assertThat(relation.fields().get(0), isField("a1"));
+        assertThat(relation.fields().get(1), isField("a2"));
         assertThat(relation.tableRelation().tableInfo(), is(T1_INFO));
     }
 }
